--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
 	"repository": "git@github.com:lafiosca/rosebus.git",
 	"author": "Joe Lafiosca <joe@lafiosca.com>",
 	"license": "MIT",
+	"private": true,
 	"workspaces": [
 		"packages/*"
 	],
 	"devDependencies": {
-		"lerna": "^3.22.1"
+		"@typescript-eslint/eslint-plugin": "^3.6.0",
+		"@typescript-eslint/parser": "^3.6.0",
+		"eslint": "^7.4.0",
+		"eslint-config-airbnb-typescript": "^8.0.2",
+		"eslint-plugin-import": "^2.22.0",
+		"lerna": "^3.22.1",
+		"typescript": "^3.9.6"
 	}
 }
