establish types lib and continue to configure lerna/ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
 	"compilerOptions": {
 		"baseUrl": "./packages",
 		"paths": {
-			"rxxbot-types": ["rxxbot-types/src"],
-			"rxxbot-server": ["rxxbot-server/src"],
-			"rxxbot-client": ["rxxbot-client/src"]
+			"rosebus-*": ["rosebus-*/src"]
 		}
 	}
 }
