--- a/packages/rosebus-types/package.json
+++ b/packages/rosebus-types/package.json
@@ -6,7 +6,7 @@
 	"types": "dist/index.d.ts",
 	"license": "MIT",
 	"scripts": {
-		"build": "./node_modules/.bin/tsc"
+		"build": "tsc -p tsconfig.build.json"
 	},
 	"dependencies": {
 	},
