--- a/package.json
+++ b/package.json
@@ -9,12 +9,6 @@
 		"packages/*"
 	],
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^3.6.0",
-		"@typescript-eslint/parser": "^3.6.0",
-		"eslint": "^7.4.0",
-		"eslint-config-airbnb-typescript": "^8.0.2",
-		"eslint-plugin-import": "^2.22.0",
-		"lerna": "^3.22.1",
-		"typescript": "^3.9.6"
+		"lerna": "^3.22.1"
 	}
 }
