more lerna/tsconfig/eslint/cra harmony

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"baseUrl": "./packages",
 		"paths": {
-			"rosebus-*": ["rosebus-*/src"]
+			"rosebus-types": ["rosebus-types/src"]
 		}
 	}
 }
