--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
 		"packages/*"
 	],
 	"devDependencies": {
-		"lerna": "^3.22.1"
+		"@typescript-eslint/eslint-plugin": "^3.10.1",
+		"@typescript-eslint/parser": "^3.10.1",
+		"eslint": "^7.7.0",
+		"eslint-config-airbnb-typescript": "^9.0.0",
+		"eslint-plugin-import": "^2.22.0",
+		"lerna": "^3.22.1",
+		"rimraf": "^3.0.2",
+		"typescript": "^4.0.2"
 	}
 }
