--- a/packages/rosebus-types/tsconfig.json
+++ b/packages/rosebus-types/tsconfig.json
@@ -4,7 +4,8 @@
 		"src/**/*"
 	],
 	"compilerOptions": {
-		"outDir": "./dist",
+		"rootDir": "./src",
+		"outDir": "./lib",
 		"declaration": true
 	}
 }
