--- a/packages/rosebus-client/package.json
+++ b/packages/rosebus-client/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@reach/router": "^1.3.4",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"rxjs": "^6.6.2"
@@ -13,6 +14,7 @@
 		"@testing-library/user-event": "^7.1.2",
 		"@types/jest": "^24.0.0",
 		"@types/node": "^12.0.0",
+		"@types/reach__router": "^1.3.5",
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
 		"@typescript-eslint/eslint-plugin": "2.x",
