--- a/packages/rosebus-types/package.json
+++ b/packages/rosebus-types/package.json
@@ -10,6 +10,10 @@
 		"compile": "tsc -p tsconfig.build.json",
 		"build": "yarn clean && yarn compile"
 	},
-	"dependencies": {},
-	"devDependencies": {}
+	"devDependencies": {
+		"rxjs": "^6.6.3"
+	},
+	"peerDependencies": {
+		"rxjs": "^6.6.3"
+	}
 }
