specialize client and server module types from base

--- a/packages/rosebus-types/package.json
+++ b/packages/rosebus-types/package.json
@@ -11,9 +11,7 @@
 		"build": "yarn clean && yarn compile"
 	},
 	"devDependencies": {
-		"rxjs": "^6.6.3"
-	},
-	"peerDependencies": {
+		"@types/react": "^16.9.49",
 		"rxjs": "^6.6.3"
 	}
 }
