revise types; create MemoryStorage

--- a/packages/rosebus-client/package.json
+++ b/packages/rosebus-client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "rosebus-client",
+	"name": "@rosydoublecross/rosebus-client",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
