--- a/packages/rosebus-server/package.json
+++ b/packages/rosebus-server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "rosebus-server",
+	"name": "@rosydoublecross/rosebus-server",
 	"version": "0.1.0",
 	"author": "Joe Lafiosca <joe@lafiosca.com>",
 	"license": "MIT",
