--- a/packages/rosebus-storage-memory/package.json
+++ b/packages/rosebus-storage-memory/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@rosydoublecross/rosebus-types",
+	"name": "@rosydoublecross/rosebus-storage-memory",
 	"version": "0.1.0",
 	"author": "Joe Lafiosca <joe@lafiosca.com>",
 	"main": "build/index.js",
@@ -10,8 +10,7 @@
 		"compile": "tsc -p tsconfig.build.json",
 		"build": "yarn clean && yarn compile"
 	},
-	"devDependencies": {
-		"@types/react": "^16.9.49",
-		"rxjs": "^6.6.3"
+	"dependencies": {
+		"@rosydoublecross/rosebus-types": "^0.1.0"
 	}
 }
