--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
 		"@typescript-eslint/parser": "^3.10.1",
 		"eslint": "^7.7.0",
 		"eslint-config-airbnb-typescript": "^9.0.0",
-		"eslint-plugin-import": "^2.22.0",
+		"eslint-config-react-app": "^5.2.1",
+		"eslint-plugin-flowtype": "^5.2.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.3.1",
+		"eslint-plugin-react": "^7.21.2",
+		"eslint-plugin-react-hooks": "^4.1.2",
 		"lerna": "^3.22.1",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.0.2"
