rename packages and scope

--- a/packages/client-textlog/package.json
+++ b/packages/client-textlog/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@rosydoublecross/rosebus-storage-memory",
+	"name": "@rosebus/client-textlog",
 	"version": "0.1.0",
 	"author": "Joe Lafiosca <joe@lafiosca.com>",
 	"main": "build/index.js",
@@ -21,6 +21,14 @@
 		"build": "yarn clean && yarn compile"
 	},
 	"dependencies": {
-		"@rosydoublecross/rosebus-common": "^0.1.0"
+		"@rosebus/common": "^0.1.0",
+		"rxjs": "^6.6.3"
+	},
+	"devDependencies": {
+		"react": "^16.13.1",
+		"@types/react": "^16.9.49"
+	},
+	"peerDependencies": {
+		"react": "*"
 	}
 }
