--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@rosydoublecross/rosebus-client",
+	"name": "@rosebus/client",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
