--- a/packages/server-memory-storage/package.json
+++ b/packages/server-memory-storage/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@rosydoublecross/rosebus-client-textlog",
+	"name": "@rosebus/server-memory-storage",
 	"version": "0.1.0",
 	"author": "Joe Lafiosca <joe@lafiosca.com>",
 	"main": "build/index.js",
@@ -21,14 +21,6 @@
 		"build": "yarn clean && yarn compile"
 	},
 	"dependencies": {
-		"@rosydoublecross/rosebus-common": "^0.1.0",
-		"rxjs": "^6.6.3"
-	},
-	"devDependencies": {
-		"react": "^16.13.1",
-		"@types/react": "^16.9.49"
-	},
-	"peerDependencies": {
-		"react": "*"
+		"@rosebus/common": "^0.1.0"
 	}
 }
