--- a/packages/rosebus-server-heartbeat/package.json
+++ b/packages/rosebus-server-heartbeat/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@rosydoublecross/rosebus-server-heartbeat",
+	"name": "@rosebus/server-heartbeat",
 	"version": "0.1.0",
 	"author": "Joe Lafiosca <joe@lafiosca.com>",
 	"main": "build/index.js",
@@ -21,7 +21,7 @@
 		"build": "yarn clean && yarn compile"
 	},
 	"dependencies": {
-		"@rosydoublecross/rosebus-common": "^0.1.0",
+		"@rosebus/common": "^0.1.0",
 		"rxjs": "^6.6.3"
 	}
 }
