add build-server yarn script; clean up yarn run commands

--- a/packages/client-textlog/package.json
+++ b/packages/client-textlog/package.json
@@ -18,7 +18,7 @@
 	"scripts": {
 		"clean": "rimraf build",
 		"compile": "tsc -p tsconfig.build.json",
-		"build": "yarn clean && yarn compile"
+		"build": "yarn run clean && yarn run compile"
 	},
 	"dependencies": {
 		"@rosebus/common": "^0.1.0",
