--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,7 +18,8 @@
 	"scripts": {
 		"clean": "rimraf build",
 		"compile": "tsc -p tsconfig.build.json",
-		"build": "yarn clean && yarn compile"
+		"build": "yarn run clean && yarn run compile",
+		"build-server": "yarn run build"
 	},
 	"devDependencies": {
 		"@types/react": "^16.9.49",
