--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,6 +14,12 @@
 		"@rosebus/common": "^0.1.0",
 		"@rosebus/server-heartbeat": "^0.1.0",
 		"@rosebus/server-memory-storage": "^0.1.0",
-		"rxjs": "^6.6.3"
+		"chalk": "^4.1.0",
+		"date-fns": "^2.16.1",
+		"rxjs": "^6.6.3",
+		"socket.io": "^2.3.0"
+	},
+	"devDependencies": {
+		"@types/socket.io": "^2.1.11"
 	}
 }
