--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,9 +4,13 @@
 	"private": true,
 	"dependencies": {
 		"@reach/router": "^1.3.4",
+		"@rosebus/common": "^0.1.0",
+		"chalk": "^4.1.0",
+		"date-fns": "^2.16.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"rxjs": "^6.6.3"
+		"rxjs": "^6.6.3",
+		"socket.io-client": "^2.3.1"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^4.2.4",
@@ -17,6 +21,7 @@
 		"@types/reach__router": "^1.3.5",
 		"@types/react": "^16.9.49",
 		"@types/react-dom": "^16.9.8",
+		"@types/socket.io-client": "^1.4.34",
 		"@typescript-eslint/eslint-plugin": "2.x",
 		"@typescript-eslint/parser": "2.x",
 		"babel-eslint": "10.x",
