--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -32,12 +32,14 @@
 		"eslint-plugin-jsx-a11y": "6.x",
 		"eslint-plugin-react": "7.x",
 		"eslint-plugin-react-hooks": "2.x",
-		"react-scripts": "3.4.3"
+		"react-app-rewired": "^2.1.6",
+		"react-scripts": "3.4.3",
+		"tsconfig-paths-webpack-plugin": "^3.3.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"test": "react-app-rewired test",
 		"eject": "react-scripts eject"
 	},
 	"browserslist": {
