--- a/packages/client-textlog/package.json
+++ b/packages/client-textlog/package.json
@@ -18,7 +18,8 @@
 	"scripts": {
 		"clean": "rimraf build",
 		"compile": "tsc -p tsconfig.build.json",
-		"build": "yarn run clean && yarn run compile"
+		"build": "yarn run clean && yarn run compile",
+		"start": "yarn run build"
 	},
 	"dependencies": {
 		"@rosebus/common": "^0.1.0",
