--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -37,7 +37,7 @@
 		"tsconfig-paths-webpack-plugin": "^3.3.0"
 	},
 	"scripts": {
-		"start": "react-app-rewired start",
+		"start": "CI=true react-app-rewired start",
 		"build": "react-app-rewired build",
 		"test": "react-app-rewired test",
 		"eject": "react-scripts eject"
