--- a/packages/client-twitch-auth/package.json
+++ b/packages/client-twitch-auth/package.json
@@ -24,15 +24,16 @@
 	"dependencies": {
 		"@rosebus/common": "^0.1.0",
 		"@rosebus/server-twitch": "^0.1.0",
-		"react-simple-oauth2-login": "^0.2.0"
+		"react-simple-oauth2-login": "^0.2.0",
+		"rxjs": "^6.6.3"
 	},
 	"devDependencies": {
+		"@reach/router": "^1.3.4",
 		"@types/react": "^16.9.49",
-		"react": "^16.13.1",
-		"@reach/router": "^1.3.4"
+		"react": "^16.13.1"
 	},
 	"peerDependencies": {
-		"react": "*",
-		"@reach/router": "^1.3.4"
+		"@reach/router": "^1.3.4",
+		"react": "*"
 	}
 }
